<resources>
    <string name="app_name">Gakusapo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_timetable">Timetable</string>
    <string name="navigation_today_and_tomorrow">Schedule</string>
    <string name="navigation_info">Info</string>
    <string name="navigation_settings">Setting</string>

    <string name="mainactivity_permission_error">Please set permissions.</string>

    <string name="information_forecast_title">Current Location\'s forecast</string>
    <string name="information_forecast_temp">%s℃</string>
    <string name="information_forecast_percent">%s"%"</string>
    <string name="information_forecast_city">%s（Reloaded: %s）</string>
    <string name="information_forecast_humidity">Humidity</string>
    <string name="information_forecast_sunset">Sunset</string>
    <string name="information_train_title">Train Info</string>
    <string name="information_train_registered">Registered Trains</string>
    <string name="information_train_available">They operate as usual.</string>
    <string name="information_train_unavailable">There are some information.</string>
    <string name="information_now_refreshing">Refreshing&#8230;</string>
    <string name="information_refreshed">Refreshed.</string>
    <string name="information_refresh_error">An error was happened. Please try again.</string>
    <string name="information_network_error">Connect to the Internet.</string>
    <string name="information_network_error_button">Open Setting App</string>

    <string name="timetable_primary_title">New timetable</string>
    <string name="timetable_editmode_toast">Edit mode</string>
    <string name="timetable_uneditmode_toast">Disabled edit mode</string>
    <string name="timetable_select">[Edit]Select mode</string>
    <string name="timetable_unselect">[Edit]Disabled select mode</string>
    <string name="timetable_already_exists">Same name one is already exists.</string>
    <string name="timetable_name_notinputed">Input timetable name.</string>
    <string name="timetable_edited_date_exists">There is a timetable which was editing when you used this app last time.
        Resume editing?
    </string>

    <string name="today_and_tomorrow_timetable">Timetable</string>
    <string name="today_and_tomorrow_today">Today\'s schedule</string>
    <string name="today_and_tomorrow_tomorrow">Tomorrow\'s schedule</string>
    <string name="today_and_tomorrow_schedule">Schedule</string>
    <string name="today_and_tomorrow_nothing">None</string>
    <string name="today_and_tomorrow_memo">Memo</string>
    <string name="today_and_tomorrow_homework">Homeworks</string>
    <string name="today_and_tomorrow_submission">Submissions</string>
    <string name="today_and_tomorrow_test">Tests</string>
    <string name="today_and_tomorrow_class">Supplementary lessons</string>
    <string name="today_and_tomorrow_event">Events</string>
    <string name="today_and_tomorrow_reminder">Reminders</string>
    <string name="today_and_tomorrow_error">Create a timetable.</string>

    <string name="setting_subject">Displayed timetable</string>
    <string name="setting_time1">Time when this app send a notification on tomorrow\'s timetable to you (24 hours)
    </string>
    <string name="setting_time2">Time when this app refresh the schedule (24 hours)</string>
    <string name="setting_timeunit">h</string>
    <string name="setting_howtouse">How to use (Japanese)</string>
    <string name="setting_license">Open source libraries</string>
    <string name="setting_privacypolicy">Privacy Policy</string>
    <string name="setting_formula">Formula</string>

    <string name="subjectdetails_subject">Subject</string>
    <string name="subjectdetails_class">Place</string>
    <string name="subjectdetails_memo">Memo</string>

    <string name="subjectsetting_description">Input the subject\'s informations.</string>
    <string name="subjectsetting_subject">Subject name</string>
    <string name="subjectsetting_class">Place</string>
    <string name="subjectsetting_memo">Memo</string>
    <string name="subjectsetting_color">Color</string>

    <string name="timetabletype_title1">Timetable name (Cannot change)</string>
    <string name="timetabletype_title2">Type (Cannot change)</string>
    <string name="timetabletype_name">Timetable name</string>

    <string name="trainchooser_description">Search by train name or company</string>

    <string name="add_train_button_add">Add</string>
    <string name="add_train_button_add_train">Add %s</string>

    <string name="notification_title">Gakusapo - Tomorrow\'s timetable</string>
    <string name="notification_message">Prepare to tomorrow!</string>

    <string name="widget_noschedule">No schedules</string>
    <string name="widget_notimetable">No available timetables</string>

    <string name="notice">Notice</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="please_input">Input&#8230;</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
