<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@drawable/background">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="16dp" android:paddingRight="16dp">
            <TextView
                    android:text="@string/navigation_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView25"
                    android:textSize="24sp" android:paddingTop="16dp" android:paddingBottom="16dp"/>
            <TextView
                    android:text="@string/setting_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView26"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingTimetableSpinner"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>
            <TextView
                    android:text="@string/setting_time1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView32"/>
            <TextView
                    android:text="0~24の値で設定してください。"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingNotificationError"
                    android:textColor="@color/default_red" android:visibility="gone"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/settingNotificationTime" android:maxLength="2" android:layout_weight="3"
                        android:layout_width="0dp"/>
                <TextView
                        android:text="@string/setting_timeunit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView38" android:layout_weight="1"
                        android:textAlignment="center"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>
            <TextView
                    android:text="@string/setting_time2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView34"/>
            <TextView
                    android:text="0~24の値で設定してください。"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingScheduleError"
                    android:textColor="@color/default_red" android:visibility="gone"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/settingScheduleTime" android:inputType="number" android:maxLength="2"
                        android:layout_weight="3" android:layout_width="0dp"/>
                <TextView
                        android:text="@string/setting_timeunit"
                        android:layout_height="wrap_content" android:id="@+id/textView37" android:textAlignment="center"
                        android:layout_width="0dp" android:layout_weight="1"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>
            <Button
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingSaveButton"
                    style="@style/Widget.AppCompat.Button.Colored"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp"/>
            <Button
                    android:text="@string/setting_howtouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingHowToUseButton"
                    style="@style/Widget.AppCompat.Button"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp"/>
            <Button
                    android:text="@string/setting_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingOSLicenseButton"/>
            <Button
                    android:text="@string/setting_privacypolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingPrivacyPolicyButton"/>
            <Button
                    android:text="@string/setting_formula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/settingFormulaButton"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="240dp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
        <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/settingAdView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-5096422984251090/1288491472">
            <!-- 本番用 ca-app-pub-5096422984251090/1288491472-->
        </com.google.android.gms.ads.AdView>
        <android.support.v4.widget.Space android:layout_width="wrap_content" android:layout_height="60dp"/>
    </LinearLayout>
</RelativeLayout>