<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/dialogListTitle" android:padding="16dp"
                android:textColor="#fff" android:background="@color/colorPrimary"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/dialogListView" android:padding="16dp" android:layout_height="360dp">
        </android.support.v7.widget.RecyclerView>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:paddingLeft="16dp" android:paddingRight="16dp"
                android:gravity="center_vertical">
            <EditText
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/dialogContentFIeld" android:layout_weight="3"
                    android:layout_height="wrap_content" android:layout_width="0dp" android:hint="@string/please_input"
            />
            <Button
                    android:text="@string/add"
                    android:layout_height="wrap_content" android:id="@+id/dialogAddContentButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"/>
        </LinearLayout>
        <Button
                android:text="@string/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/dialogListCloseButton"
                style="@style/Widget.AppCompat.Button.Colored" android:layout_margin="16dp"/>
    </LinearLayout>
</RelativeLayout>